--- a/Majan2/Base.lproj/Main.storyboard
+++ b/Majan2/Base.lproj/Main.storyboard
@@ -351,6 +351,9 @@
                                 <rect key="frame" x="510" y="325" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="調べる"/>
+                                <connections>
+                                    <segue destination="orq-OB-rqK" kind="presentation" identifier="toToitu" id="oFg-0f-8bv"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yfc-y0-KpK">
                                 <rect key="frame" x="528" y="48" width="73" height="30"/>
@@ -418,6 +421,46 @@
                 <exit id="ens-Sp-Vm5" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1476.6116941529237" y="136.80000000000001"/>
+        </scene>
+        <!--Toitu Kekkahyouji-->
+        <scene sceneID="kgL-DM-cft">
+            <objects>
+                <viewController id="orq-OB-rqK" customClass="ToituKekkahyouji" customModule="Majan2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cKC-CJ-9EJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="Euw-b5-4Mw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GRf-Iz-nC0">
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGV-SZ-2jC">
+                                <rect key="frame" x="91" y="41" width="503" height="224"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hjc-LE-mWz">
+                                <rect key="frame" x="316" y="325" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="back"/>
+                                <connections>
+                                    <segue destination="lG5-8W-KK3" kind="unwind" unwindAction="unwindToTopWithSegue:" id="LTo-A4-dgI"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="Hyouji" destination="DGV-SZ-2jC" id="hx6-EI-1o7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jdk-FL-tAc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="lG5-8W-KK3" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1470.3148425787108" y="984.79999999999995"/>
         </scene>
     </scenes>
 </document>
